GNOME Bugzilla – Bug 697947
A lot of GTK+ apps fail to launch with error "desktop_shell::get_shell_surface already requested"
Last modified: 2013-04-13 21:20:26 UTC
With the latest git tree of GTK+,a lot of apps that is complicated enough ,for example, transmission-gtk and evince , fail to launch with error messages like this: Gdk-ERROR **: wl_surface@27: error 0: desktop_shell::get_shell_surface already requested After searching for a while I believe this is caused by the code in commit https://git.gnome.org/browse/gtk+/commit/gdk/wayland/gdkwindow-wayland.c?id=8d884bb4fb31872766bfa6f33f667e0a4fbf0e26 in gdk_wayland_window_show(): when gdk_wayland_window_show is called more than once for one window,it will cause wl_shell_get_shell_surface being called on one surface more than once ,which is a fatal error. I made a little work around with it and the app launches successfully, but I do not know if it is the right fix.
Created attachment 241443 [details] [review] work around