wayland: Don't get the shell surface twice

Noticed by Pu Xingyu,
https://bugzilla.gnome.org/show_bug.cgi?id=697947